--- a/src/app/startscreen/register/register.component.html
+++ b/src/app/startscreen/register/register.component.html
@@ -135,11 +135,16 @@
           }"
           formControlName="passwordInput"
           [placeholder]="'Passwort'"
-          type="password"
+          [type]="isPasswordVisible ? 'text' : 'password'"
           name="password"
           (focus)="isPasswordInputActive = true"
           (blur)="isPasswordInputActive = false"
         />
+        <div class="user-register-passwort-hide">
+          <img src="{{ isPasswordVisible ? showPasswordImage : hidePasswordImage }}" (click)="togglePasswordVisibility()" style="cursor: pointer" />
+          <span (click)="togglePasswordVisibility()" style="cursor: pointer"></span>
+
+        </div>
       </div>
       <div
         *ngIf="
@@ -153,7 +158,7 @@
           *ngIf="contactForm.controls['passwordInput'].hasError('minlength')"
           [ngClass]="{ 'warning-password': true }"
         >
-          {{ "*Gültiges Passwort eingeben (mindestens 6 Zeichen)." }}
+        {{ "*Gültiges Passwort mit mindestens 6 Zeichen , einem Großbuchstaben und einem Sonderzeichen eingeben." }}
         </span>
       </div>
     </div>
