--- a/src/app/startscreen/register/register.component.scss
+++ b/src/app/startscreen/register/register.component.scss
@@ -49,6 +49,18 @@
     
 }
 
+.user-register-passwort-hide{
+    display: flex;
+    position: relative;
+    left: 450px;
+    top: -41px;
+    width: 50px;
+    img{
+        width: 24px;
+        height: 24px;
+    }
+}
+
 
 .user-register-email,
 .user-register-password {
