--- a/src/app/mainscreen/channel/channel.component.html
+++ b/src/app/mainscreen/channel/channel.component.html
@@ -1,16 +1,16 @@
-<mat-card id="channel" *ngIf="channelData" class="br-30">
+<mat-card id="channel" class="br-30">
     <mat-card-content id="channel-content">channel</mat-card-content>
     <ul>
         <!-- <li *ngFor="let user of channelData.users">{{ }}      </li>-->
     </ul>
 
-    <div *ngIf="channelData">
-        <div *ngFor="let messageRef of messages">
+    <div *ngIf="channelFirebaseService.currentChannel">
+        <div *ngFor="let messageRef of channelFirebaseService.currentChannel.messages">
             <app-message [id]="messageRef"></app-message>
         </div>
     </div>
     
-    <app-message-create [channel]="channelData"></app-message-create>
+    <app-message-create></app-message-create>
 
     
 </mat-card>
