--- a/src/app/mainscreen/channel/message-create/message-create.component.html
+++ b/src/app/mainscreen/channel/message-create/message-create.component.html
@@ -1,6 +1,7 @@
 <textarea 
     class="message-write-container" 
     [(ngModel)]="message.content"
-    placeholder="Nachricht an #{{ channel.channelName }}">
+    *ngIf="firebaseChannelService.loadedChannels[firebaseChannelService.loadedChannelId]"
+    placeholder="Nachricht an #{{ firebaseChannelService.loadedChannels[firebaseChannelService.loadedChannelId].channelName }}">
 </textarea>
 <button (click)="createMessage()">Create Messge</button>
