--- a/src/app/mainscreen/header/header.component.html
+++ b/src/app/mainscreen/header/header.component.html
@@ -5,7 +5,7 @@
     <input id="header-searchfield" type="text" placeholder="Code learning durchsuchen">
     <div id="header-user">
         <h1>{{user.firstName}} {{user.lastName}}</h1>
-        <div id="header-user-icon">
+        <div *ngIf="user.avatar!=''" id="header-user-icon">
             <img src="assets/img/avatar/avatar1.svg" alt="UserIcon">
             <div id="header-status"></div>
         </div>
@@ -49,6 +49,7 @@
         </div>
         <div>
             <h4>E-mail-Adresse</h4>
+            <h4>{{user.mail}}</h4>
         </div>
     </div>
 </div>
