--- a/src/app/mainscreen/message/message.component.html
+++ b/src/app/mainscreen/message/message.component.html
@@ -1,10 +1,10 @@
-<div class='message-container' *ngIf="message" >
+<div class='message-container' *ngIf="_message">
     <div class="message-head">
-        <div> {{ formatTimestampToHHMM(message.timestamp) }}</div>
-        <div><b>{{ message.autorId}}</b></div>
+        <div> {{ formatTimestampToHHMM(_message.timestamp) }}</div>
+        <div *ngIf="autorName!=''"><b>{{ autorName }}</b></div>
     </div>
     <mat-card>
-        <mat-card-content>{{ message.content }}</mat-card-content>
+        <mat-card-content>{{ _message.content }}</mat-card-content>
     </mat-card>
 </div>
 
